LPS-77908 - Add button overlaps fix

--- a/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_management_bar.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_management_bar.scss
@@ -10,11 +10,15 @@
 		min-height: $management-bar-height;
 		position: relative;
 
-		.btn-action {
+		.btn-action, .btn-action-secondary > .btn {
 			color: #FFF;
 			height: 2.1rem;
 			line-height: 2.1rem;
 			width: 2.1rem;
+		}
+
+		.add-menu {
+			z-index: inherit;
 		}
 
 		.checkbox,
